1. 用户模块初始化 2. common-util新增流程定义